# vibes

./: Cargo.toml
src/: main.rs
